--- a/wcamp/app/views/ship/index.html.erb
+++ b/wcamp/app/views/ship/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Ship#index</h1>
-<p>Find me in app/views/ship/index.html.erb</p>
+<div id="search">
+	<%= render :partial => "search" %>
+</div>
+<div id="order_list">
+	<%= render :partial => "order_list" %>
+</div>
