--- a/wcamp/app/views/casein_layouts/_right_navigation.html.erb
+++ b/wcamp/app/views/casein_layouts/_right_navigation.html.erb
@@ -1,1 +1,1 @@
-<li id="visitSite"><%= link_to "業務", casein_config_hostname %></li>
+<li id="visitSite"><%= link_to "業務", :controller => :ctl %></li>
