--- a/wcamp/app/views/layouts/is.html.erb
+++ b/wcamp/app/views/layouts/is.html.erb
@@ -1,23 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<!DOCTYPE html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta harset=utf-8" />
 	<title>WAACS-CAMP</title>
-	<%= javascript_include_tag "/jqtouch/jqtouch/jquery-1.4.2.min.js" %>
+	<%= javascript_include_tag "/jqtouch/jqtouch/jquery-1.4.2.js" %>
 	<%= javascript_include_tag "/jqtouch/jqtouch/jqtouch.js" %>
 	<%= stylesheet_link_tag "/jqtouch/jqtouch/jqtouch.css" %>
-	<%= stylesheet_link_tag "/jqtouch/themes/apple/theme.css" %>
+	<%= stylesheet_link_tag "/jqtouch/themes/jqt/theme.css" %>
+	<%= stylesheet_link_tag "is.css" %>
 	<script type="text/javascript" charset="utf-8">
-		$.JQTouch({
-			icon: 'jqtouch.png',
-			statusBar: 'black-translucent',
-			preloadImages: [
-				'jqtouch/themes/jpt/img/chevron_white.png',
-				'jqtouch/themes/jqt/img/bg_row_select.gif',
-				'jqtouch/themes/jqt/img/back_button_clicked.png',
-				'jqtouch/themes/jqt/img/button_clicked.png'
-				]
-		});
+		$.JQTouch();
 	</script>
 </head>
 <body>
