--- a/wcamp/app/views/is/clock.html.erb
+++ b/wcamp/app/views/is/clock.html.erb
@@ -5,7 +5,7 @@
 	<%= javascript_include_tag "/jqtouch/jqtouch/jqtouch.js" %>
 	<%= stylesheet_link_tag "/jqtouch/jqtouch/jqtouch.css" %>
 	<%= stylesheet_link_tag "/jqtouch/themes/jqt/theme.css" %>
-	<%= stylesheet_link_tag "clock.css" %>
+	<%= stylesheet_link_tag "/jqtouch/demos/clock/clock.css" %>
         <!-- 
             jQTouch Clock Demo
             All custom code is embedded below:
