--- a/trunk/wcamp/public/stylesheets/is.css
+++ b/trunk/wcamp/public/stylesheets/is.css
@@ -3,7 +3,7 @@ body.fullscreen #home .info {
 }
 #about {
 	padding: 100px 10px 40px;
-	text-shadow: rgba(255,255,255, 0.30) 0px -px 0;
+	text-shadow: rgba(255,255,255, 0.3) 0px -1px 0;
 	font-size: 13px;
 	text-align: center;
 	background: #161618;
