--- a/wcamp/app/views/is/index.html.erb
+++ b/wcamp/app/views/is/index.html.erb
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
+<html>
 <head>
-	<meta harset=utf-8" />
 	<title>WAACS-CAMP</title>
 	<%= javascript_include_tag "/jqtouch/jqtouch/jquery-1.4.2.js" %>
 	<%= javascript_include_tag "/jqtouch/jqtouch/jqtouch.js" %>
 	<%= stylesheet_link_tag "/jqtouch/jqtouch/jqtouch.css" %>
-	<%= stylesheet_link_tag "/jqtouch/themes/jqt/theme.css" %>
-	<%= stylesheet_link_tag "is.css" %>
+	<%= stylesheet_link_tag "/jqtouch/themes/apple/theme.css" %>
 	<script type="text/javascript" charset="utf-8">
-		$.JQTouch();
+		$.jQTouch();
 	</script>
+	<%= stylesheet_link_tag "is.css", :media => "screen" %>
 </head>
 <body>
-<div>
-	<ul>
-		<li><a>li</a></li>
-		<li class="arrow"><a>class="&quot;arrow&quot;</a></li>
-		<li><a>counter</a><small class="counter">3</small></li>
-		<li class="arrow"><a href=#demos">class="&quot;arrow&quot; + counter</a><small class="counter">2</li>
-		<li class="forward"><a href="#demos">class=&quot;forward&quot;</a></li>
-	</ul>
+	<div id="jqt">
+		<div id="home">
+			<ul>
+				<li><a>li&nbsp;<%= @title %></a></li>
+				<li class="arrow"><a>class=&quot;arrow&quot;</a></li>
+				<li><a>counter</a><small class="counter">3</small></li>
+				<li class="arrow">
+					<a href=#demos">class="&quot;arrow&quot; + counter</a><small class="counter">2</small>
+				</li>
+				<li class="forward"><a href="#demos">class=&quot;forward&quot;</a></li>
+			</ul>
 	
-	<h2>ul.form</h2>
-	<ul class="form">
-		<li><a>li</a></li>
-	</ul>
+			<h2>ul.form</h2>
+			<ul class="form">
+				<li><a>li</a></li>
+			</ul>
 	
-	<h2>ul.individual</h2>
-	<ul class="individual">
-		<li><a>リンク有</a></li>
-		<li>リンク無</li>
-	</ul>
-</div>	
+			<h2>ul.individual</h2>
+			<ul class="individual">
+				<li><a>リンク有</a></li>
+				<li>リンク無</li>
+			</ul>
+		</div>	
+	</div>
 </body>
 </html>
