--- a/trunk/wcamp/app/views/ctl/index.html.erb
+++ b/trunk/wcamp/app/views/ctl/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Ctl#index</h1>
-<p>Find me in app/views/ctl/index.html.erb</p>
+<div class="yui3-ge">
+	<div class="yui3-u first">
+		<div id="search">
+			<%= render :partial => "search" %>
+		</div>
+		<div id="work_order_list">
+			<%= render :partial => "work_order_list" %>
+		</div>
+	</div>
+	<div class="yui3-u">
+	</div>
+</div>
