--- a/trunk/wcamp/app/views/ship/_order_head.html.erb
+++ b/trunk/wcamp/app/views/ship/_order_head.html.erb
@@ -1,4 +1,9 @@
 <tr>
 	<th><%= t 'label.ship_order.work_line_no' %></th>	
+	<th><%= t 'label.ship_order.location' %></th>	
+	<th><%= t 'label.ship_order.goods_code' %></th>	
+	<th><%= t 'label.ship_order.goods_name' %></th>	
+	<th><%= t 'label.ship_order.order_qty' %></th>	
+	<th><%= t 'label.ship_order.result_qty' %></th>	
 	<th>&nbsp;</th>
 </tr>
