--- a/wcamp/app/views/ship/_order_item.html.erb
+++ b/wcamp/app/views/ship/_order_item.html.erb
@@ -1,4 +1,9 @@
 <tr>
-	<td><%= order.work_line_no %></td>
-	<td>&nbsp;</td>
+	<td class="num"><%= order.work_line_no %></td>
+	<td><%= order.location %></td>
+	<td><%= order.goods_code %></td>
+	<td><%= order.goods_name %></td>
+	<td class="num"><%= order.order_qty %></td>
+	<td class="num"><%= text_field :order, :result_qty, :size => 5 %></td>
+	<td><%= check_box_tag 'fixed' %></td>
 </tr>
