--- a/wcamp/app/views/ship/index.html.erb
+++ b/wcamp/app/views/ship/index.html.erb
@@ -1,6 +1,13 @@
-<div id="search">
-	<%= render :partial => "search" %>
-</div>
-<div id="order_list">
-	<%= render :partial => "order_list" %>
+<div class="yui3-gf">
+	<div class="yui3-u first">
+			<%= render :partial => "work_order_list" %>
+	</div>
+	<div class="yui3-u">
+		<div id="search">
+			<%= render :partial => "search" %>
+		</div>
+		<div id="order_list">
+			<%= render :partial => "order_list" %>
+		</div>
+	</div>
 </div>
