--- a/wcamp/app/views/ctl/_work_order_item.html.erb
+++ b/wcamp/app/views/ctl/_work_order_item.html.erb
@@ -1,5 +1,5 @@
 <tr>
-	<td><%= work_order.work_no %></td>
+	<td><%= link_to_remote work_order.work_no, :url => {:action => 'show', :id => work_order.id} %></td>
 	<td><%= work_order.delivery_name %></td>
 	<td class="num"><%= work_order.order_lines %></td>
 	<td><%= work_order.status %></td>
