--- a/wcamp/app/views/shared/_menu.html.erb
+++ b/wcamp/app/views/shared/_menu.html.erb
@@ -1,4 +1,6 @@
 |
+<%= link_to "出荷検品", :controller => "ship" %>
+|
 <%= link_to "監視", :controller => "ctl" %>
 |
 <%= link_to "EDI" , :controller => "edi" %>
