--- a/wcamp/app/views/ctl/_search.html.erb
+++ b/wcamp/app/views/ctl/_search.html.erb
@@ -1,4 +1,4 @@
-<% form_remote_tag :url => "/ship/search/" do %>	
+<% form_remote_tag :url => "/ctl/search/" do %>	
 <%= t 'label.ship_order.work_no' %><%= text_field_tag :search, @work_no, :size => 10 %>
 <%= submit_tag "検索" %>
 <% end %>
