--- a/trunk/wcamp/app/views/ctl/_work_order_item.html.erb
+++ b/trunk/wcamp/app/views/ctl/_work_order_item.html.erb
@@ -8,4 +8,6 @@
 	<td><%= work_order.device %></td>
 	<td>&nbsp;</td>
 </tr>
-<tr id="<%= 'work_order_' + work_order.id.to_s %>"></tr>
+<tr id="<%= 'work_order_' + work_order.id.to_s %>">
+	<td colspan="8" style="padding:0px;margin:0px;border:0px;"></td>
+</tr>
