--- a/wcamp/public/stylesheets/wcamp.css
+++ b/wcamp/public/stylesheets/wcamp.css
@@ -4,16 +4,16 @@
 }
 
 body {
-	background: #EFEFEF;
+	background: #E0E0E0;
 }
 
 
 #hd #bd {
-	background: #EFEFEF;
+	background: #E0E0E0;
 }
 
 .yui-skin-sam .yui-navset .yui-content{
-	background: #EFEFEF;
+	background: #E0E0E0;
 }
 
 .box {
@@ -43,7 +43,7 @@ body {
 }
 
 .list table th{
-	background : #666;
+	background : #486D94;
 	color : #fff;
 	font-weight : bold;
 	padding : 3px;
@@ -52,6 +52,22 @@ body {
 .list table td{
 	padding : 2px;
 	border-bottom: 1px solid #666; 
+}
+
+.list2 table th{
+	background : #B6C5D4;
+	color : #000;
+	font-weight : bold;
+	padding : 3px;
+}
+
+.list2 table td{
+	padding : 2px;
+	border-bottom: 1px solid #B6C5D4; 
+}
+
+.list2 a{
+  text-decoration: none;
 }
 
 .num {
