--- a/wcamp/app/views/edi/index.html.erb
+++ b/wcamp/app/views/edi/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Edi#index</h1>
-<p>Find me in app/views/edi/index.html.erb</p>
+<div class="yui3-main">
+	<div class="yui3-b">
+	&nbsp;
+	</div>
+	<div class="yui3-b">
+		<div class="yui3-g">
+			<div class="yui3-u first" id="edi_class_list">
+				<%= render :partial => 'edi_class_list' %>
+			</div>
+			<div class="yui3-u">
+				<%= render :partial => 'edi_file_list' %>
+			</div>
+		</div>
+	</div>
+</div>
