--- a/wcamp/app/views/shared/_menu.html.erb
+++ b/wcamp/app/views/shared/_menu.html.erb
@@ -1,11 +1,9 @@
 |
 <%= link_to "出荷検品", :controller => "ship" %>
 |
-<%= link_to "監視", :controller => "ctl" %>
+<%= link_to "作業監視", :controller => "ctl" %>
 |
-<%= link_to "EDI" , :controller => "edi" %>
-|
-<%= link_to "物流機器" , :controller => "device" %>
+<%= link_to "EDI/物流機器" , :controller => "edi" %>
 |
 <%= link_to "クラウドセンタ" , :controller => "mon" %>
 |
