--- a/trunk/wcamp/app/views/edi/_edi_file_list.html.erb
+++ b/trunk/wcamp/app/views/edi/_edi_file_list.html.erb
@@ -2,11 +2,12 @@
 <table width="100%">
 	<thead>
 		<tr>
-			<th><%= t('edi_file.class_name') %></th>
-			<th><%= t('edi_file.edi_code') %></th>
-			<th><%= t('edi_file.file_path') %></th>
-			<th><%= t('edi_file.edi_at') %></th>
-			<th><%= t('edi_file.show_status') %></th>
+			<th><%= t('label.edi_file.class_name') %></th>
+			<th><%= t('label.edi_file.edi_code') %></th>
+			<th><%= t('label.edi_file.file_path') %></th>
+			<th><%= t('label.edi_file.edi_at') %></th>
+			<th><%= t('label.edi_file.device') %></th>
+			<th><%= t('label.edi_file.show_status') %></th>
 			<th>&nbsp;</th>
 		</tr>
 	</thead>
