--- a/trunk/wcamp/app/views/shared/_menu.html.erb
+++ b/trunk/wcamp/app/views/shared/_menu.html.erb
@@ -1,4 +1,5 @@
 <%= link_menu_to "出荷検品", { :controller => "ship" } %>
+<%= link_menu_to "入荷確定", { :controller => "receive" } %>
 <%= link_menu_to "作業監視", { :controller => "ctl" } %>
 <%= link_menu_to "EDI/物流機器" , { :controller => "edi" }  %>
 <%= link_menu_to "クラウドセンタ" , { :controller => "mon" } %>
