--- a/wcamp/app/views/receive/_search.html.erb
+++ b/wcamp/app/views/receive/_search.html.erb
@@ -1,4 +1,6 @@
 <% form_remote_tag :url => "/receive/search/" do %>	
-<%= t 'label.receive.work_no' %><%= text_field_tag :search, @work_no, :size => 10 %>
+<%= t 'label.receive.work_no' %>&nbsp;,&nbsp;
+<%= t 'label.receive.goods_code' %>
+<%= text_field :keyword, :search, :size => 30 %>
 <%= submit_tag "検索" %>
 <% end %>
