--- a/wcamp/app/views/receive/_receive_item.html.erb
+++ b/wcamp/app/views/receive/_receive_item.html.erb
@@ -4,5 +4,6 @@
 	<td><%= text_field :receive, :location,:value => receive.location, :size => 20 %></td>
 	<td class="num"><%= receive.announced_qty %></td>
 	<td class="num"><%= text_field :receive, :result_qty, :value => receive.result_qty, :size => 5 %></td>
+	<td><%= receive.status %></td>
 	<td><%= check_box_tag 'fixed' %></td>
 </tr>
