--- a/trunk/wcamp/app/views/receive/_receive_head.html.erb
+++ b/trunk/wcamp/app/views/receive/_receive_head.html.erb
@@ -4,5 +4,6 @@
 	<th><%= t 'label.receive.location' %></th>	
 	<th><%= t 'label.receive.announced_qty' %></th>	
 	<th><%= t 'label.receive.result_qty' %></th>	
+	<th><%= t 'label.receive.status' %></th>	
 	<th>&nbsp;</th>
 </tr>
