--- a/wcamp/app/views/receive/_receive_head.html.erb
+++ b/wcamp/app/views/receive/_receive_head.html.erb
@@ -1,4 +1,5 @@
 <tr>
+	<th><%= t 'label.receive.work_no' %></th>	
 	<th><%= t 'label.receive.goods_code' %></th>	
 	<th><%= t 'label.receive.goods_name' %></th>	
 	<th><%= t 'label.receive.location' %></th>	
