--- a/trunk/wcamp/app/views/receive/_receive_item.html.erb
+++ b/trunk/wcamp/app/views/receive/_receive_item.html.erb
@@ -1,4 +1,5 @@
 <tr>
+	<td><%= receive.work_no %></td>
 	<td><%= receive.goods_code %></td>
 	<td><%= receive.goods_name %></td>
 	<td><%= text_field :receive, :location,:value => receive.location, :size => 20 %></td>
