--- a/trunk/wcamp/app/views/receive/_receive_head.html.erb
+++ b/trunk/wcamp/app/views/receive/_receive_head.html.erb
@@ -1,10 +1,11 @@
 <tr>
 	<th><%= t 'label.receive.work_no' %></th>	
+	<th><%= t 'label.receive.supplier' %></th>	
 	<th><%= t 'label.receive.goods_code' %></th>	
 	<th><%= t 'label.receive.goods_name' %></th>	
 	<th><%= t 'label.receive.location' %></th>	
-	<th><%= t 'label.receive.announced_qty' %></th>	
-	<th><%= t 'label.receive.result_qty' %></th>	
+	<th class="num"><%= t 'label.receive.announced_qty' %></th>	
+	<th class="num"><%= t 'label.receive.result_qty' %></th>	
 	<th><%= t 'label.receive.status' %></th>	
 	<th>&nbsp;</th>
 </tr>
