--- a/trunk/wcamp/app/views/receive/_work_receive_list.html.erb
+++ b/trunk/wcamp/app/views/receive/_work_receive_list.html.erb
@@ -10,7 +10,7 @@
 	<tbody>
 		<% for work_receive in @work_receives %>
 			<tr>
-				<td><%= work_receive.work_no %></td>
+				<td><%= link_to_remote work_receive.work_no, :url => {:action => 'search', :search => work_receive.work_no} %></td>
 				<td><%= work_receive.status %></td>
 				<td class="num"><%= work_receive.receive_lines %></td>
 		<% end %>
