--- a/trunk/wcamp/app/views/receive/_receive_list.html.erb
+++ b/trunk/wcamp/app/views/receive/_receive_list.html.erb
@@ -11,14 +11,19 @@
 &nbsp;|&nbsp;
 <%= link_to_remote t('label.form.set_all'),:url => {:action => 'set_all_qty'} -%>
 &nbsp;|&nbsp;
+<%= link_to_remote t('label.form.new_line'),:url => {:action => 'new'} -%>
+&nbsp;|&nbsp;
 </h3>
-<!-- %= will_paginate @receives, :renderer => 'RemoteLinkRenderer', :params => {:action => 'search'} % -->
+<div style="float:right;">
+<%= will_paginate @receives, :renderer => 'RemoteLinkRenderer', :params => {:action => 'search'} %>
+</div>
 <div class="list">
 <table width="100%">
 	<thead>
 		<%= render :partial => "receive_head" %>	
 	</thead>
 	<tbody>
+	<tr id="new_receive"></tr>
 	<% for receive in @receives %>
 		<%= render :partial => "receive_item", :locals => {:receive => receive} %>	
 	<% end %>
