--- a/wcamp/app/views/ship/_order_head.html.erb
+++ b/wcamp/app/views/ship/_order_head.html.erb
@@ -3,7 +3,7 @@
 	<th><%= t 'label.ship_order.location' %></th>	
 	<th><%= t 'label.ship_order.goods_code' %></th>	
 	<th><%= t 'label.ship_order.goods_name' %></th>	
-	<th><%= t 'label.ship_order.order_qty' %></th>	
-	<th><%= t 'label.ship_order.result_qty' %></th>	
+	<th class="num"><%= t 'label.ship_order.order_qty' %></th>	
+	<th class="num"><%= t 'label.ship_order.result_qty' %></th>	
 	<th>&nbsp;</th>
 </tr>
