--- a/trunk/wcamp/app/views/ship/_work_order_list.html.erb
+++ b/trunk/wcamp/app/views/ship/_work_order_list.html.erb
@@ -4,15 +4,13 @@
 		<tr>
 			<th><%= t 'label.ship_order.work_no' %></th>
 			<th><%= t 'label.ship_order.status' %></th>
-			<th><%= t 'label.ship_order.order_lines' %></th>
 		</tr>
 	</thead>
 	<tbody>
 		<% for work_order in @work_orders %>
 			<tr>
-				<td><%= work_order.work_no %></td>
+				<td><%= link_to_remote work_order.work_no, :url => {:action => 'search', :work_no => work_order.work_no} %></td>
 				<td><%= work_order.status %></td>
-				<td class="num"><%= work_order.order_lines %></td>
 		<% end %>
 	</tbody>
 </table>
