--- a/trunk/wcamp/app/views/ship/index.html.erb
+++ b/trunk/wcamp/app/views/ship/index.html.erb
@@ -1,6 +1,8 @@
 <div class="yui3-gf">
 	<div class="yui3-u first">
+		<div id="work_order_list">
 			<%= render :partial => "work_order_list" %>
+		</div>
 	</div>
 	<div class="yui3-u">
 		<div id="search">
