--- a/trunk/wcamp/app/views/edi/index.html.erb
+++ b/trunk/wcamp/app/views/edi/index.html.erb
@@ -7,7 +7,7 @@
 			<div class="yui3-u first" id="edi_class_list">
 				<%= render :partial => 'edi_class_list' %>
 			</div>
-			<div class="yui3-u">
+			<div class="yui3-u" id="edi_file_list">
 				<%= render :partial => 'edi_file_list' %>
 			</div>
 		</div>
