--- a/trunk/wcamp/app/views/layouts/wcamp.html.erb
+++ b/trunk/wcamp/app/views/layouts/wcamp.html.erb
@@ -18,6 +18,9 @@
 <body class="yui-skin-sam">
 	<div class="yui3-d2f">
 		<div id="hd">
+			<div id="hello">
+				お疲れさまです。&nbsp;<%= @session_user.name %>&nbsp;さん&nbsp;
+			</div>
 			<div id="topnav">
 				<%= render :partial => "shared/menu" %>
 			</div>
