--- a/trunk/wcamp/app/views/layouts/wcamp.html.erb
+++ b/trunk/wcamp/app/views/layouts/wcamp.html.erb
@@ -9,6 +9,7 @@
 	<%= stylesheet_link_tag 'error' %>
 	<%= stylesheet_link_tag 'wcamp' %>
 	<%= stylesheet_link_tag 'topnav' %>
+	<%= stylesheet_link_tag 'paginate' %>
 	<%= javascript_include_tag :defaults %>
 	<%= javascript_include_tag casein_config_javascript_includes, :cache => "casein_main_javascripts" %>
 	<%= calendar_date_select_includes 'red' %>
