--- a/trunk/wcamp/app/views/is/index.html.erb
+++ b/trunk/wcamp/app/views/is/index.html.erb
@@ -15,8 +15,8 @@
 	<div id="jqt">
 		<div id="home">
 			<ul class="individual">
-				<li><%= link_to_remote "本日分", :url => {:action => 'show_today'} %></a></li>
-				<li><a>出荷残</a></li>
+				<li><%= link_to_remote "本日分", :url => {:action => 'show_today'} %></li>
+				<li><%= link_to_remote "出荷残", :url => {:action => 'show_balance'} %></li>
 			</ul>
 			<div id="work">
 			</div>
