--- a/trunk/wbirdfarm/public/stylesheets/topnav.css
+++ b/trunk/wbirdfarm/public/stylesheets/topnav.css
@@ -2,9 +2,9 @@
 	float: right;
 	margin: 0;
 	padding: 0 0 0px 10px;
-	border-top: 1px solid #993300;
-	border-bottom: 1px solid #993300;
-	background: #CC3300;
+	border-top: 1px solid #660000;
+	border-bottom: 1px solid #660000;
+	background: #990000;
 }
 
 #topnav ul, #topnav li{
