add master mente of Inventory

--- a/trunk/wbirdfarm/app/views/casein_layouts/_navigation.html.erb
+++ b/trunk/wbirdfarm/app/views/casein_layouts/_navigation.html.erb
@@ -1,4 +1,5 @@
 <!-- NOTE: script/generate casein_scaffold automatically appends new controllers to this file. The SCAFFOLD_INSERT line must NOT be removed -->
 <!-- SCAFFOLD_INSERT -->
+<li id="visitSite"><%= link_to "Inventories", :controller => :casein_inventories %></li>
 <li id="visitSite"><%= link_to "Ware houses", :controller => :casein_ware_houses %></li>
 <li id="visitSite"><%= link_to "Regions", :controller => :casein_regions %></li>
