--- a/trunk/wbirdfarm/app/views/casein_orders/_table.html.erb
+++ b/trunk/wbirdfarm/app/views/casein_orders/_table.html.erb
@@ -2,13 +2,13 @@
 
 <table cellpadding="0" cellspacing="0" id="itemList" class="itemList">
 	<tr>
-		<th>Order no</th>
-		<th>Issued on</th>
-		<th>Customer code</th>
-		<th>Store code</th>
-		<th>Goods code</th>
-		<th>Order qty</th>
-		<th>Ware house</th>
+		<th><%= t 'label.order.order_no' %></th>
+		<th><%= t 'label.order.issued_on'%></th>
+		<th><%= t 'label.order.customer_code' %></th>
+		<th><%= t 'label.order.store_code' %></th>
+		<th><%= t 'label.order.goods_code' %></th>
+		<th><%= t 'label.order.order_qty' %></th>
+		<th><%= t 'label.order.ware_house' %></th>
 		<th>&nbsp;</th>
 	</tr>
 	
