--- a/trunk/wbirdfarm/app/views/casein_ware_houses/_table.html.erb
+++ b/trunk/wbirdfarm/app/views/casein_ware_houses/_table.html.erb
@@ -2,10 +2,10 @@
 
 <table cellpadding="0" cellspacing="0" id="itemList" class="itemList">
 	<tr>
-		<th>Name</th>
-		<th>Code</th>
-		<th>Allocate priority</th>
-		<th>Region</th>
+		<th><%= t 'label.ware_house.name' %></th>
+		<th><%= t 'label.ware_house.code' %></th>
+		<th><%= t 'label.ware_house.allocate_priority' %></th>
+		<th><%= t 'label.ware_house.region' %></th>
 		<th>&nbsp;</th>
 	</tr>
 	
