--- a/trunk/wbirdfarm/app/views/casein_shipping_addresses/_table.html.erb
+++ b/trunk/wbirdfarm/app/views/casein_shipping_addresses/_table.html.erb
@@ -2,12 +2,12 @@
 
 <table cellpadding="0" cellspacing="0" id="itemList" class="itemList">
 	<tr>
-		<th>Name</th>
-		<th>Customer code</th>
-		<th>Zip code</th>
-		<th>Email</th>
-		<th>Picking style</th>
-		<th>Ware house</th>
+		<th><%= t 'label.shipping_address.name' %></th>
+		<th><%= t 'label.shipping_address.customer_code' %></th>
+		<th><%= t 'label.shipping_address.zip_code' %></th>
+		<th><%= t 'label.shipping_address.email' %></th>
+		<th><%= t 'label.shipping_address.picking_style' %></th>
+		<th><%= t 'label.shipping_address.ware_house' %></th>
 		<th>&nbsp;</th>
 	</tr>
 	
