--- a/trunk/wbirdfarm/app/views/casein_shipping_addresses/_table.html.erb
+++ b/trunk/wbirdfarm/app/views/casein_shipping_addresses/_table.html.erb
@@ -4,8 +4,8 @@
 	<tr>
 		<th><%= t 'label.shipping_address.name' %></th>
 		<th><%= t 'label.shipping_address.customer_code' %></th>
+		<th><%= t 'label.shipping_address.code' %></th>
 		<th><%= t 'label.shipping_address.zip_code' %></th>
-		<th><%= t 'label.shipping_address.email' %></th>
 		<th><%= t 'label.shipping_address.picking_style' %></th>
 		<th><%= t 'label.shipping_address.ware_house' %></th>
 		<th>&nbsp;</th>
@@ -17,8 +17,8 @@
 		<tr class="<%= casein_table_row_class_name row %> hover">
 			<td><%= casein_table_cell_link shipping_address.name, shipping_address %></td>
 			<td><%= casein_table_cell_link shipping_address.customer_code, shipping_address %></td>
+			<td><%= casein_table_cell_link shipping_address.code, shipping_address %></td>
 			<td><%= casein_table_cell_link shipping_address.zip_code, shipping_address %></td>
-			<td><%= casein_table_cell_link shipping_address.email, shipping_address %></td>
 			<td><%= casein_table_cell_link shipping_address.picking_style, shipping_address %></td>
 			<td><%= casein_table_cell_link shipping_address.show_ware_house_name, shipping_address %></td>
 			<td class="delete">
