--- a/trunk/wbirdfarm/app/views/casein_orders/_form.html.erb
+++ b/trunk/wbirdfarm/app/views/casein_orders/_form.html.erb
@@ -33,5 +33,8 @@
 	<%= casein_select form, order, :shipping_address_id, ShippingAddress.all.collect{|w| [w.name, w.id]}, {:include_blank => true} %>
 </div>
 
+<div class="tfContainer">
+	<%= casein_text_area form, order, :original_data %>
+</div>
 
 <div class="clearer"></div>
